@startuml

title __MEDIA's Class Diagram__\n

  package  {
    package com.formation.poe {
      package com.formation.poe.media {
        class Author {
            {static} - id : int
            - name : String
            - surname : String
            + Author()
            + Author()
            {static} + getId()
            {static} + setId()
            + getName()
            + setName()
            + getSurname()
            + setSurname()
            + toString()
        }
      }
    }
  }
  

  package  {
    package com.formation.poe {
      package com.formation.poe.media {
        class Book {
            - nPages : int
            + Book()
            + Book()
            + getNetPrice()
            + toString()
            + getNPages()
            + setNPages()
        }
      }
    }
  }
  

  package  {
    package com.formation.poe {
      package com.formation.poe.media {
        class CD {
            - nTracks : int
            + CD()
            + CD()
            + getNetPrice()
            + getnTracks()
            + setnTracks()
            + toString()
        }
      }
    }
  }
  

  package  {
    package com.formation.poe {
      package com.formation.poe.media {
        class Cart {
            - mediaList : List<IMedia>
            + add()
            + remove()
            + getTotalNetPrice()
            + getMediaList()
            + toString()
        }
      }
    }
  }
  

  package  {
    package com.formation.poe {
      package com.formation.poe.media {
        class CartRow {
            - n : int
            + CartRow()
        }
      }
    }
  }
  

  package  {
    package com.formation.poe {
      package com.formation.poe.media {
        class DVD {
            - zone : int
            + DVD()
            + DVD()
            + getNetPrice()
            + getZone()
            + setZone()
        }
      }
    }
  }
  

  package  {
    package com.formation.poe {
      package com.formation.poe.media {
        interface IMedia {
            {abstract} + getNetPrice()
            {abstract} + getId()
            {abstract} + setId()
            {abstract} + getTitle()
            {abstract} + setTitle()
            {abstract} + getPrice()
            {abstract} + setPrice()
            {abstract} + getVatRate()
            {abstract} + setVatRate()
            {abstract} + getDiscount()
            {abstract} + setDiscount()
            {abstract} + getAuthors()
            {abstract} + setAuthors()
            {abstract} + getPublisher()
            {abstract} + setPublisher()
            {abstract} + toString()
        }
      }
    }
  }
  

  package  {
    package com.formation.poe {
      package com.formation.poe.media {
        class Main {
            {static} + main()
        }
      }
    }
  }
  

  package  {
    package com.formation.poe {
      package com.formation.poe.media {
        abstract class Media {
            {static} - id : int
            - title : String
            - price : double
            - vatRate : double
            - discount : double
            - authors : List<Author>
            + Media()
            + Media()
            + getId()
            + setId()
            + getTitle()
            + setTitle()
            + getPrice()
            + setPrice()
            + getVatRate()
            + setVatRate()
            + getDiscount()
            + setDiscount()
            + getAuthors()
            + setAuthors()
            + getPublisher()
            + setPublisher()
            + toString()
        }
      }
    }
  }
  

  package  {
    package com.formation.poe {
      package com.formation.poe.media {
        class Publisher {
            {static} - id : int
            - name : String
            + Publisher()
            + Publisher()
            + toString()
            {static} + getId()
            + getName()
            + setName()
        }
      }
    }
  }
  

  Book -up-|> Media
  CD -up-|> Media
  CartRow o-- Media : m
  DVD -up-|> Media
  Media -up-|> IMedia
  Media "*" o-- "1" Publisher : publisher
  Media "*" o-- "*" Author : authorList
  Cart o--> "*" Media : medialist
  Media o--> "*" Publisher : publisher


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
